--- a/package.json
+++ b/package.json
@@ -193,7 +193,7 @@
     ]
   },
   "publishConfig": {
-    "tag": "latest"
+    "tag": "stable"
   },
   "husky": {
     "hooks": {
@@ -201,7 +201,7 @@
     }
   },
   "release": {
-    "branch": "master",
+    "branch": "v13",
     "tagFormat": "${version}",
     "analyzeCommits": {
       "preset": "angular",
